css : added highlighting in menu for active pages; fixed grid gap in About

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -79,7 +79,7 @@
 		position: relative;
 		font-size: 30px;
 		text-transform: uppercase;
-		padding: 1rem 0;
+		padding: 0.5rem 0;
 		font-weight: 300;
 		color: white;
 		text-decoration: none;
@@ -88,6 +88,10 @@
 		&:hover {
 			text-decoration: underline;
 		}
+	}
+
+	.current {
+		color: $secondary-color;
 	}
 }
 
