--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,12 +83,13 @@ main {
 	}
 }
 
+// About Page
 .about-info {
 	margin-top: 1vh;
 	display: grid;
-	grid-gap: 20px;
-	grid-template-areas: 'bioimage bio' 'job1 job1';
-	grid-template-columns: repeat(2,3fr);
+	grid-gap: 20 px;
+	grid-template-areas: 'bioimage bio bio bio' 'job1 job1 job1 job1';
+	grid-template-columns: repeat(4,4fr);
 }
 
 .bio-profile {
@@ -105,6 +106,7 @@ main {
 }
 
 .job {
+	margin-top: 1vh;
 	background: lighten($primary-color, 5);
 	padding: 0.5rem;
 }
